--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: Palaktube
-aftertitle: 'New scandal & leaked sextapes & holiwood sex video & kpop scandal & pinay scandal'
+aftertitle: 'Website for pinay new scandal & pinay leaked sextapes & pinay scandal'
+description: 'Website for pinay new scandal & pinay leaked sextapes & pinay scandal'
+meta: 'pinay sex,  pinay scandal, pinay scandals, pinay sextape, pinay sex video, pinay sex videos, pinay interracial, pinay scandal party, pinay sex party, pinay gangbang, nene, mokong, nagparaos, sinibak, sinisibak, pinay threesome, pinay blowjob, pinay tinira, pinay celebrity sex, pinay celebrity scandal, celebrity celebrity sex scandal, pinay cebebrity scandals'
 exclude: true
 priority: 0.8
 changefreq: daily
