--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 ---
 layout: default
-title: Palaktube
-aftertitle: 'Website for pinay new scandal & pinay leaked sextapes & pinay scandal'
-description: 'Website for pinay new scandal & pinay leaked sextapes & pinay scandal'
-meta: 'pinay sex,  pinay scandal, pinay scandals, pinay sextape, pinay sex video, pinay sex videos, pinay interracial, pinay scandal party, pinay sex party, pinay gangbang, nene, mokong, nagparaos, sinibak, sinisibak, pinay threesome, pinay blowjob, pinay tinira, pinay celebrity sex, pinay celebrity scandal, celebrity celebrity sex scandal, pinay cebebrity scandals'
+title: PalakTube
 exclude: true
 priority: 0.8
 changefreq: daily
 ---
+
 <section id='page'>
    <section class='posts'>
       {% include pagination.html paginate-position='paginate-top' %}
@@ -45,9 +43,10 @@ changefreq: daily
       </a>
       {% endfor %} 
 
-      {% include pagination.html%}
+      {% include pagination.html %}
    </section>
 </section>
+
 <section id='sidebar'>
    <img src='{{ site.baseurl }}/assets/img/sidebar.jpg' alt='{{ site.data.settings.title}}'>
 </section>      
